# influxdb

./: README.md  agent.md  goal.md
existierende Packages/01_pyinfluxdb/influxDB_package/: credentials.py  influxDB.py
existierende Packages/02_influxdbpy_github_reto/influxdbpy/: __init__.py  base.py  client_v1.py  client_v2.py  factory.py  utils.py
existierende Packages/02_influxdbpy_github_reto/tests/: test_influxdb.py
existierende Packages/03_influxdbr_wrapper/: README.md  dev.py
existierende Packages/03_influxdbr_wrapper/influxdbr_wrapper/: README.md  example_r.R  influxdbr_wrapper.R
existierende Packages/04_lcm_r_influxdb2/: fct_influxdb_datalayer.R  fct_influxdbv2_client.R
existierende Packages/05_monitoringDB_v1_v2/influxdbpy/: base.py  client_v1.py  client_v2.py  factory.py
existierende Packages/06_Siemens_BX/influxDB_package/: credentials.py  influxDB.py  test_influxdb.py
existierende Packages/07_miniDataCloudClient/: README.md  setup.py
existierende Packages/07_miniDataCloudClient/MDCclient.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
existierende Packages/07_miniDataCloudClient/mdcclient/: __init__.py  _default_influxdb_config.ini  _func.py
influxdb-toolkit/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
influxdb-toolkit/.github/workflows/: ci.yml  publish.yml
influxdb-toolkit/docs/: architecture_concept.md  auth_config_comparison.md  data_structure_analysis.md  influxdb_v1_vs_v2_overview.md  internal_package_inventory.md  python_package_comparison.md  usage_setup.md  week_status.md
influxdb-toolkit/scripts/: schema_report.py  smoke_read.py
influxdb-toolkit/src/influxdb_toolkit/: __init__.py  base.py  client.py  config.py  exceptions.py  models.py  profiles.py
influxdb-toolkit/src/influxdb_toolkit/v1/: client.py  query_builder.py
influxdb-toolkit/src/influxdb_toolkit/v2/: __init__.py  client.py  query_builder.py
influxdb-toolkit/tests/unit/: test_admin_and_v2_helpers.py  test_base.py  test_base_extended.py  test_config.py  test_factory.py  test_profiles.py  test_query_builders.py  test_scripts_helpers.py  test_write_batching.py
